--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -369,7 +369,7 @@ AnimStateNode=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collisio
 AnimGraphNode_Root=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 AnimGraphNode_StateMachine=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 AnimGraphNode_BlendSpacePlayer=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-NiagaraFloat=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+NiagaraFloat=
 BP_Grappling_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 AnimGraphNode_SequencePlayer=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 EdGraph=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -378,7 +378,7 @@ BP_Checkpoint_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,
 AmbientSound=CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Get_CurrentSkill_Brush=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Get_CurrentSkill_Brush_12=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-NiagaraSystem=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+NiagaraSystem=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Vector=
 SphereComponent=SphereComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PointLightComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -386,7 +386,7 @@ W_InteractPoint_C=
 W_Interact_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 SpotLight=SphereComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 W_SplashScreen_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BP_Enemy_Shooter_C=
+BP_Enemy_Shooter_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 BP_EnemyMelee_C=
 Object=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 W_end_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -455,7 +455,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Enemies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -481,7 +481,7 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[5]\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" "
 InputAction="\"Object\" "
 NiagaraBakerOutputTexture2D="\"Object\" "
 NiagaraBakerOutput="\"Object\" "
@@ -597,7 +597,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 BlockoutToolsSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -696,7 +696,7 @@ MaterialExpressionTextureBase="\"Object\" "
 W_Objective_C="\"Object\" "
 CableComponent="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
-PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+PreviewMeshCollection="\"Object\" "
 AssetViewerSettings="\"Object\" "
 FirstPerson_AnimBP_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -864,6 +864,10 @@ SpotLightComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_Enemy_Shooter.BP_Enemy_Shooter
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyProjectile.BP_EnemyProjectile
+OpenAssetsAtExit=/Game/Blueprints/Enemies/Comp_EnemyShoot.Comp_EnemyShoot
+OpenAssetsAtExit=/Game/Vfx/newvfx/Projectileslancer_02.Projectileslancer_02
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -3387,28 +3391,29 @@ SpotLightComponent.Tags=True
 SpotLightComponent.ComponentReplication=True
 SpotLightComponent.Cooking=True
 SpotLightComponent.Events=True
+NiagaraSystem.NiagaraSystem_UserParameters=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/CustomGameInstance
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/Audio/AudioSettings/SM_Main
-MRUItem3=/Game/Audio/AudioSettings/SC_SFX
-MRUItem4=/Game/Audio/AudioSettings/SC_Music
-MRUItem5=/Game/Audio/AudioSettings/SC_Main
-MRUItem6=/Game/Blueprints/BP_PlatformPieces
-MRUItem7=/Game/Widget/Menu/W_GameOver
-MRUItem8=/Game/Audio/Music/Atmosphere_DarkDisturbing_Loop
-MRUItem9=/Game/Widget/Menu/W_Menu
-MRUItem10=/Game/Widget/SkillTree/W_SkillTree
-MRUItem11=/Game/Maps/FirstPersonMap
-MRUItem12=/Game/Widget/SkillTree/W_SkillButton
-MRUItem13=/Game/Blueprints/BP_SkillPoint
-MRUItem14=/Game/Widget/W_end
-MRUItem15=/Game/Maps/Menu
-MRUItem16=/Game/Widget/SplashScreen/W_SplashScreen
-MRUItem17=/Game/Widget/Menu/W_Options
-MRUItem18=/Game/Widget/Menu/W_Pause
-MRUItem19=/Game/Meshs/Props/Diego_Platerform/Mi_Sheet_Steel
+MRUItem0=/Game/Vfx/newvfx/Projectileslancer_02
+MRUItem1=/Game/Vfx/newvfx/Projectilesconstruction_03
+MRUItem2=/Game/Blueprints/Enemies/DistanceEnemy/Meshs/distance_enemy_00
+MRUItem3=/Game/Blueprints/Enemies/Comp_EnemyShoot
+MRUItem4=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem5=/Game/Blueprints/Enemies/BP_Enemy_Shooter
+MRUItem6=/Game/CustomGameInstance
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/Audio/AudioSettings/SM_Main
+MRUItem9=/Game/Audio/AudioSettings/SC_SFX
+MRUItem10=/Game/Audio/AudioSettings/SC_Music
+MRUItem11=/Game/Audio/AudioSettings/SC_Main
+MRUItem12=/Game/Blueprints/BP_PlatformPieces
+MRUItem13=/Game/Widget/Menu/W_GameOver
+MRUItem14=/Game/Audio/Music/Atmosphere_DarkDisturbing_Loop
+MRUItem15=/Game/Widget/Menu/W_Menu
+MRUItem16=/Game/Widget/SkillTree/W_SkillTree
+MRUItem17=/Game/Maps/FirstPersonMap
+MRUItem18=/Game/Widget/SkillTree/W_SkillButton
+MRUItem19=/Game/Blueprints/BP_SkillPoint
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -3701,6 +3706,9 @@ MRUItem19=/Game/Meshs/Props/Diego_Platerform/Mi_Sheet_Steel
 /Game/Meshs/Props/Diego_Platerform/Mi_Sheet_Steel.Mi_Sheet_Steel=1
 /Game/Audio/Music/Atmosphere_DarkDisturbing_Loop.Atmosphere_DarkDisturbing_Loop=0
 /Game/Audio/AudioSettings/SM_Main.SM_Main=1
+/Game/Blueprints/Enemies/DistanceEnemy/Meshs/distance_enemy_00.distance_enemy_00=1
+/Game/Vfx/newvfx/Projectilesconstruction_03.Projectilesconstruction_03=1
+/Game/Vfx/newvfx/Projectileslancer_02.Projectileslancer_02=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4835,11 +4843,11 @@ MovieSceneCapture.TimeStamp=2023.06.12-18.54.26
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.06.12-18.54.28
 SequencerWidgets.LastCompileMethod=External
-BlockoutToolsPlugin.TimeStamp=2023.06.14-13.29.30
+BlockoutToolsPlugin.TimeStamp=2023.06.20-08.35.53
 BlockoutToolsPlugin.LastCompileMethod=External
 FlatNodes.TimeStamp=2023.06.10-11.56.07
 FlatNodes.LastCompileMethod=External
-BlockoutToolsEditorPlugin.TimeStamp=2023.06.14-13.29.30
+BlockoutToolsEditorPlugin.TimeStamp=2023.06.20-08.35.52
 BlockoutToolsEditorPlugin.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2023.06.12-18.54.25
 HierarchicalLODUtilities.LastCompileMethod=External
@@ -4864,8 +4872,8 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Programme/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Programme/Unreal/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UnrealEngine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=G:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
