--- a/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PFAparkour/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,6 +157,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=1
 CameraSpeed=5
 CurrentRotGridSize=4
+CurrentPosGridSize=4
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Shoot.IA_Shoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_SkillTree.IA_SkillTree,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Spell.IA_Spell,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightShoot.IA_LightShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_LightSpellChoice.IA_LightSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkShoot.IA_DarkShoot,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_DarkSpellChoice.IA_DarkSpellChoice,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Dash.IA_Dash,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Melee.IA_Melee,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause
@@ -166,7 +167,7 @@ StaticMeshComponent=CapsuleComponent.Collision.Collision,CableComponent.Transfor
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
 BP_Enemy_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-SkeletalMeshComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
+SkeletalMeshComponent=
 CapsuleComponent=
 SceneComponent=
 Blockout_Box_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -352,10 +353,10 @@ BP_SkillPoint_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,
 W_SkillPoint_ObtentionNotify_C=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive
 MulticastInlineDelegatePropertyWrapper=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-Comp_EnemyShoot_C=
+Comp_EnemyShoot_C=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 CameraActor=CameraActor.PostProcess.Color Grading,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,BP_Enemy_C.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 K2Node_MakeStruct=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
-BrushComponent=
+BrushComponent=BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,WorldSettings.WorldPartitionSetup.RuntimeHash,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Brush=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 NavMeshBoundsVolume=BP_Enemy_C.Collision.Collision,CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
 Light_C=CapsuleComponent.Collision.Collision,CableComponent.TransformCommon.Transform,CameraActor.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features,BP_Enemy_C.Collision.Collision,BoxComponent.Collision.Collision,WorldSettings.WorldPartitionSetup.RuntimeHash,K2Node_CallFunction.Inputs.254B5A5845B2748C882EE586DAC198CB,K2Node_VariableSet.DefaultValueCategory.PostProcessSettings,K2Node_VariableSet.DefaultValueCategory.Rendering Features,K2Node_MakeStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.skillDescription,PropertyWrapper.DefaultValueCategory.skillsList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -474,7 +475,7 @@ LastLevel=/Game/Maps/FirstPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
+Object="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -598,13 +599,13 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 BlockoutToolsSettings="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+ShapeComponent="\"Object\" "
 Blockout_Box_C="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 BlockoutToolsParent="\"Object\" \"Object.Blockout Tools.Blockout Tools|Blockout Box\" \"Object.Blockout Tools.Blockout Tools|Blockout Material\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object\" "
 PreviewMaterial="\"Object\" "
@@ -701,7 +702,7 @@ PreviewMeshCollection="\"Object\" "
 AssetViewerSettings="\"Object\" "
 FirstPerson_AnimBP_C="\"Object\" "
 AnimInstance="\"Object\" "
-W_Pause_C="\"Object\" "
+W_Pause_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 W_SkillTree_C="\"Object\" "
@@ -3412,28 +3413,54 @@ W_Controls_C.Navigation=True
 W_Controls_C.Localization=True
 W_Controls_C.Layout=True
 W_Controls_C.Default=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.LeaderPoseComponent=True
+SkeletalMeshActor.AnimationRig=True
+SkeletalMeshActor.Deformer=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.HLOD=True
+SkeletalMeshActor.PathTracing=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Networking=True
+SkeletalMeshActor.WorldPartition=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+BP_Enemy_Shooter_C.Networking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Enemies/BP_EnemyMelee
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/Maps/FirstPersonMap
-MRUItem3=/Game/Widget/SkillTree/W_SkillTree
-MRUItem4=/Game/Widget/Menu/W_Controls
-MRUItem5=/Game/Maps/Menu
-MRUItem6=/Game/Widget/Menu/W_Menu
-MRUItem7=/Game/Widget/Menu/W_Options
-MRUItem8=/Game/Maps/SplashScreen
-MRUItem9=/Game/Widget/SplashScreen/W_SplashScreen
-MRUItem10=/Game/Vfx/newvfx/Projectileslancer_02
-MRUItem11=/Game/Blueprints/Enemies/Comp_EnemyShoot
-MRUItem12=/Game/Blueprints/Enemies/BP_EnemyProjectile
-MRUItem13=/Game/Blueprints/Enemies/BP_Enemy_Shooter
-MRUItem14=/Game/Vfx/newvfx/Projectilesconstruction_03
-MRUItem15=/Game/Blueprints/Enemies/DistanceEnemy/Meshs/distance_enemy_00
-MRUItem16=/Game/CustomGameInstance
-MRUItem17=/Game/Audio/AudioSettings/SM_Main
-MRUItem18=/Game/Audio/AudioSettings/SC_SFX
-MRUItem19=/Game/Audio/AudioSettings/SC_Music
+MRUItem0=/Game/Blueprints/Enemies/Comp_EnemyShoot
+MRUItem1=/Game/Blueprints/Enemies/BP_Enemy_Shooter
+MRUItem2=/Game/Blueprints/BP_Checkpoint
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/Blueprints/BP_SkillPoint
+MRUItem5=/Game/Widget/Menu/W_Pause
+MRUItem6=/Game/Blueprints/Enemies/BP_EnemyMelee
+MRUItem7=/Game/Maps/FirstPersonMap
+MRUItem8=/Game/Widget/SkillTree/W_SkillTree
+MRUItem9=/Game/Widget/Menu/W_Controls
+MRUItem10=/Game/Maps/Menu
+MRUItem11=/Game/Widget/Menu/W_Menu
+MRUItem12=/Game/Widget/Menu/W_Options
+MRUItem13=/Game/Maps/SplashScreen
+MRUItem14=/Game/Widget/SplashScreen/W_SplashScreen
+MRUItem15=/Game/Vfx/newvfx/Projectileslancer_02
+MRUItem16=/Game/Blueprints/Enemies/BP_EnemyProjectile
+MRUItem17=/Game/Vfx/newvfx/Projectilesconstruction_03
+MRUItem18=/Game/Blueprints/Enemies/DistanceEnemy/Meshs/distance_enemy_00
+MRUItem19=/Game/CustomGameInstance
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Input/IMC_Weapons.IMC_Weapons=0
@@ -5273,7 +5300,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -5510,4 +5537,9 @@ PaletteThumbnailScale=0.300000012
 IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
